--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,6 +228,17 @@ verbose_message("Install targets succesfully build. Install with `cmake --build 
 # Quick `ConfigVersion.cmake` creation
 #
 
+set(COPY_SOURCE "${CMAKE_CURRENT_LIST_DIR}/cmake/ProjectConfig.cmake.in")
+set(COPY_TARGET "${CMAKE_CURRENT_LIST_DIR}/cmake/${PROJECT_NAME}Config.cmake.in")
+execute_process (
+  COMMAND 
+    "copy ${COPY_SOURCE} ${COPY_TARGET}"
+  OUTPUT_VARIABLE 
+    STDOUT
+)
+message(STATUS "------------------ Copy Output ------------------\n${STDOUT}")
+message(STATUS "-------------------------------------------------")
+
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
     ${PROJECT_NAME}ConfigVersion.cmake
